# hibf

./: .clang-format  .clang-tidy  .cmake-format.yaml  .codecov.yml  .editorconfig  .gitmodules  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  README.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/config/: codechecker.skip  codechecker.yml
.github/workflows/: ci_codechecker.yml  ci_codeql.yml  ci_coverage.yml  ci_documentation.yml  (+17 more)
build_system/: hibf-config-version.cmake  hibf-config.cmake  hibf-install.cmake  hibf-package.cmake  library_template-config-version.cmake  library_template-config.cmake  library_template-install.cmake  library_template-package.cmake
cmake/: CPM.cmake  configuration.cmake  cpack.cmake  cpack_install.cmake.in  cxx_config.cmake  hibf-config.cmake.in  install.cmake  package-lock.cmake  simde.cmake  version.cmake
doc/: main_page.md
src/: CMakeLists.txt  config.cpp  hierarchical_interleaved_bloom_filter.cpp  interleaved_bloom_filter.cpp
src/detail/: CMakeLists.txt
src/detail/layout/: CMakeLists.txt  compute_fp_correction.cpp  compute_fpr_correction.cpp  compute_layout.cpp  execute.cpp  hierarchical_binning.cpp  layout.cpp  output.cpp  simple_binning.cpp
src/detail/sketch/: CMakeLists.txt  hyperloglog.cpp  toolbox.cpp
src/layout/: compute_fpr_correction.cpp  compute_layout.cpp  compute_relaxed_fpr_correction.cpp  data_store.cpp  execute.cpp  graph.cpp  hierarchical_binning.cpp  layout.cpp  simple_binning.cpp
src/misc/: insert_iterator.cpp  print.cpp
src/sketch/: compute_sketches.cpp  hyperloglog.cpp  minhashes.cpp  toolbox.cpp
test/: hibf-test.cmake  library_template-test.cmake
test/all/: CMakeLists.txt
test/documentation/: CMakeLists.txt  DoxygenLayout.xml  README.md  api-stability.js  hibf-doxygen-layout.cmake  hibf-doxygen-package.cmake  hibf-doxygen.cmake  hibf.css  hibf_doxygen_cfg.in  hibf_footer.html.in  hibf_header.html  library_template-doxygen-layout.cmake  library_template-doxygen-package.cmake  library_template-doxygen.cmake  library_template_doxygen_cfg.in  library_template_footer.html.in  seqan_logo.svg.license
test/documentation/.vercel/: 0_setup.sh  1_build.sh  Notes.md  build.sh  powered-by-vercel.svg.license
test/documentation/.vercel/api/: doxysearch.sh
test/documentation/doc_dev/: CMakeLists.txt
test/documentation/doc_usr/: CMakeLists.txt
test/documentation/doxygen-awesome/: doxygen-awesome-darkmode-toggle.js  doxygen-awesome-fragment-copy-button.js  doxygen-awesome-interactive-toc.js  doxygen-awesome-tabs.js  doxygen-awesome.css
test/header/: CMakeLists.txt  generate_header_source.cmake
test/iwyu/: CMakeLists.txt
test/iwyu/mappings/: gcc.libc.imp  gcc.stl.headers.imp  gcc.symbols.imp  iwyu.imp  libcxx.imp  stl.c.headers.imp  stl.public.imp
test/performance/: CMakeLists.txt
test/performance/example/: CMakeLists.txt  example_benchmark.cpp
test/performance/hibf/: CMakeLists.txt  hierarchical_interleaved_bloom_filter_benchmark.cpp
test/performance/ibf/: CMakeLists.txt  binning_bitvector_benchmark.cpp  bit_vector_benchmark.cpp  bit_vector_serialisation_benchmark.cpp  interleaved_bloom_filter_benchmark.cpp  interleaved_bloom_filter_construction_benchmark.cpp
test/performance/sketch/: CMakeLists.txt  compute_sketches_benchmark.cpp  hyperloglog_benchmark.cpp
test/snippet/: CMakeLists.txt  compare_snippet_output.cmake  platform_unreachable.cpp  readme.cpp  readme.out  snippet_main.cpp  unreachable.cpp
test/snippet/hibf/: bin_indices_of_ibf.cpp  config_input_fn_dummy.cpp  config_input_fn_file.cpp  config_input_fn_vector.cpp  config_number_of_user_bins.cpp  hibf_construction.cpp  hierarchical_interleaved_bloom_filter.cpp  hierarchical_interleaved_bloom_filter.out
test/snippet/ibf/: containment_agent_bulk_contains.cpp  containment_agent_construction.cpp  counting_agent.cpp  counting_agent.out  counting_agent_construction.cpp  counting_vector.cpp  interleaved_bloom_filter_clear.cpp  interleaved_bloom_filter_clear.out  interleaved_bloom_filter_constructor.cpp  interleaved_bloom_filter_emplace.cpp  interleaved_bloom_filter_increase_bin_number_to.cpp  interleaved_bloom_filter_try_increase_bin_number_to.cpp  interleaved_bloom_filter_try_increase_bin_number_to.out  interleaved_bloom_filter_try_increase_bin_number_to.out.license  membership_agent_bulk_contains.cpp  membership_agent_construction.cpp  membership_agent_membership_for.cpp  membership_agent_membership_for.out  membership_agent_membership_for.out.license
test/snippet/test/: tmp_directory.cpp
test/tutorial/: CMakeLists.txt  build.cpp  count.cpp  index.hpp  main.cpp  search.cpp  sequence_io.hpp  validator.hpp
test/unit/: CMakeLists.txt  hierarchical_interleaved_bloom_filter_test.cpp
test/unit/hibf/: CMakeLists.txt  bit_vector_test.cpp  config_test.cpp  counting_vector_avx512_test.cpp  counting_vector_test.cpp  hierarchical_interleaved_bloom_filter_test.cpp  insert_iterator_test.cpp  interleaved_bloom_filter_avx512_test.cpp  interleaved_bloom_filter_test.cpp  path_test.cpp  print_test.cpp  timer_test.cpp
test/unit/hibf/detail/layout/: CMakeLists.txt  fpr_correction_test.cpp  hierarchical_binning_test.cpp  layout_test.cpp  simple_binning_test.cpp
test/unit/hibf/detail/sketch/: CMakeLists.txt  estimate_kmer_counts_test.cpp  hyperloglog_test.cpp  toolbox_test.cpp
test/unit/hibf/layout/: CMakeLists.txt  compute_layout_test.cpp  data_store_test.cpp  fpr_correction_test.cpp  graph_test.cpp  hierarchical_binning_test.cpp  layout_test.cpp  simple_binning_test.cpp
test/unit/hibf/sketch/: CMakeLists.txt  compute_sketches_test.cpp  estimate_kmer_counts_test.cpp  hyperloglog_test.cpp  minhashes_test.cpp  toolbox_test.cpp
test/unit/test/: CMakeLists.txt  expect_range_eq_test.cpp  expect_same_type_test.cpp  file_access_test.cpp  sandboxed_path_test.cpp  temporary_snippet_file_test.cpp  tmp_directory_test.cpp
util/: CMakeLists.txt  fpr_correction_check.cpp  fpr_quality.cpp  hash_collisions.cpp
util/inspect/: example.md  fmt.hpp  inspect.cpp  inspect.hpp  inspector.hpp
(+167 files in other folders)
